run api on 80 port, add environment variables
